tests/snapshots/examples_fixtures/aoc__2025__aoc_day4_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day4_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day4_part2.flx:63:42
   |
63 |     step_round(lines, rows, cols, r + 1, push(next_lines, next_line), removed_total + removed_row)
   |                                          ^^^^

Hint:
  Define it first: let push = ...;


error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day4_part2.flx:79:13
   |
79 | let lines = [line | line <- raw_lines, line != ""]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             -------------------------------------- parameter 1 has type `Array<String>`

   |             -------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.

Found 2 errors.
== stdout ==
<not executed>
